# ElevatorSimulator

./: Building.cpp  Building.h  CMakeLists.txt  Direction.h  Elevator.cpp  Elevator.h  ElevatorManager.cpp  ElevatorManager.h  Floor.cpp  Floor.h  Person.cpp  Person.h  README.md  Request.cpp  Request.h  Requests.cpp  Requests.h  conversion.h  main.cpp  people.txt
